# moderator-tg-bot

backend/: conifg.py  main.py  pyproject.toml
backend/db/: __init__.py  base.py  database.py  models.py
backend/models/: admin.py  chat.py  chat_member.py  violation.py
backend/routers/: chats.py
bot/: main.py  pyproject.toml
bot/exceptions/: exceptions.py
bot/handlers/: group_handlers.py  private_handlers.py
bot/keyboards/: keyboards.py  main_keyboard.py
bot/texts/: bot_buttons.py  bot_messages.py  messages.json
bot/utils/: db.py  message_loader.py
docs/: bot_architecture.drawio  schemas.drawio
