[tool.poetry]
name = "moderator-tg-bot"
version = "0.1.0"
description = ""
authors = ["Santiperro <egor.ev22@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
python-dotenv = "^1.0.1"
aiogram = "^3.16.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"